# WAD-IT093IU

./: .env.example  .flake8  .gitignore  .style.yapf  Dockerfile.server  Pipfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  swe-data-maker.ipynb
backend/: .dockerignore  Dockerfile  backend_prestart.py  initial_data.py  main.py  prestart.sh  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 1811e64c3a8e_first_revision.py  7b95c2ce02a2_first_revision.py  8c7218d09522_init.py  a5785f2bb5b3_first_revision.py
backend/core/: config.py
backend/core/security/: __init__.py  auth.py
backend/crud/: __init__.py  category.py  customer.py  import_detail.py  importation.py  item.py  shop.py  transact_detail.py  transaction.py  user.py
backend/database/: config.py  init_db.py
backend/database/dummy_data/: categories.csv  customers.csv  importation_details.csv  importations.csv  items.csv  shops.csv  transaction_details.csv  transactions.csv
backend/models/: __init__.py
backend/routers/: __init__.py  categories.py  customers.py  importations.py  items.py  shops.py  transactions.py  users.py
backend/routers/endpoints/: categories.py  customers.py  details.py  importations.py  items.py  shops.py  transactions.py
backend/routers/internal/: __init__.py  admin.py
backend/schemas/: __init__.py
backend/schemas/internal/: __init__.py
backend/security/: __init__.py
client/: .dockerignore  Dockerfile  client.py  main.py  pyproject.toml  session_state.py  settings.py
client/.streamlit/: config.toml
client/api/: __init__.py  categories.py  customers.py  importations.py  items.py  shops.py  transactions.py
client/components/: __init__.py  customer.py
client/gui/: _plot.py  _table.py  main_page.py
client/main_page/: __init__.py
client/management/: __init__.py  category.py  customer.py  importation.py  item.py  shop.py  transaction.py
client/menu/: __init__.py
client/plot/: __init__.py
client/table/: __init__.py
dummy/dummy_data/: categories.csv  importations.csv  shops.csv
frontend/: Dockerfile  main.py  pyproject.toml  settings.py  test.py
frontend/api/: __init__.py  categories.py  customers.py  importations.py  items.py  shops.py  transactions.py  user.py
frontend/core/: config.py
frontend/main_page/: __init__.py
frontend/management/: __init__.py  backup_old_code.py  categories.py  category.py  customers.py  importation.py  importations.py  items.py  shop.py  shops.py  transaction.py  transactions.py
frontend/menu/: __init__.py
frontend/plot/: __init__.py
frontend/table/: __init__.py
server/: .dockerignore  Dockerfile  main.py  prestart.sh  pyproject.toml  requirements.txt  settings.py  start-reload.sh
server/alembic/: env.py
server/alembic/versions/: 69967722fd33_first_migration.py  be41e9010db7_second_migration.py
server/crud/: category.py  customer.py  import_detail.py  importation.py  item.py  shop.py  transact_detail.py  transaction.py  transaction_detail.py  user.py
server/database/: __init__.py  config.py  sql.py
server/database/dummy/dummy_data/: Customer.csv  ImportDetail.csv  Imports.csv  Item.csv  ItemCategory.csv  Shop.csv
server/encryption/: __init__.py
server/internal/: admin.py
server/models/: __init__.py
server/routers/: __init__.py  categories.py  customer.py  customers.py  importations.py  item_category.py  items.py  shops.py  transactions.py  users.py
server/routers/internal/: admin.py
server/schemas/: __init__.py  secure.py
server/security/: auth.py
test/dummy/: csv_to_json.py
test/dummy/dummy_data/: Item.csv  Shop.csv  TransactionDetail.csv  Transactions.csv
wms/: cli.py  sesson_state.py
wms/components/: Customer.py  Imports.py  Item.py  ItemCategory.py  Shop.py  __init__.py  item.py  transactions.py
wms/database/: sql.py
wms/encryption/: __init__.py  encryption.py
wms/gui/: _management.py  management.py  menu.py
wms/hello/: demo.py
