[tool.poetry]
name = "wad-it093iu"
version = "0.1.0"
description = "A simple RESTful app with Python"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
requests = "^2.25.1"
SQLAlchemy = "^1.4.17"
streamlit = "^0.82.0"
argon2-cffi = "^20.1.0"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"
aiosqlite = "^0.17.0"
aiohttp-sqlalchemy = "^0.9.0"
async_generator = "^1.10"
async-exit-stack = "^1.0.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8-bandit = "^2.1.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
