[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Nguyen Nhat Minh", email = "52833936+Doki064@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.8,<3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["isort~=5.8", "yapf~=0.31", "flake8-bandit~=2.1"]
