[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nguyen Nhat Minh <52833936+Doki064@users.noreply.github.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
SQLAlchemy = "^1.4.18"
asyncpg = "^0.23.0"
alembic = "^1.6.5"
python-dotenv = "^0.17.1"
orjson = "^3.5.3"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.5"
aioify = "^0.4.0"
tenacity = "^7.0.0"
SQLAlchemy-Utils = "^0.37.7"
pandas = "^1.2.4"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
