[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Nguyen Nhat Minh", email = "52833936+Doki064@users.noreply.github.com"},
]
dependencies = ["fastapi~=0.65", "uvicorn~=0.14", "sqlalchemy~=1.4", "asyncpg~=0.23", "alembic~=1.6", "argon2-cffi~=20.1", "python-dotenv~=0.17"]
requires-python = ">=3.8, <3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
